app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require 'masonry/transitions'
 *= require_tree .
 *= require_self
 */


@import "bootstrap-sprockets";
@import "bootstrap";

// variables
$max-width: 100%;
$max-height: 100%;


body {
   padding-top: 70px;
   font-family: 'Poiret One', cursive; 
}

#view-container {
   width: $max-width;
}

.collapse.navbar-collapse ul li 
{
   padding-top: 0;
   @media screen and (max-width: 768px){
      padding-top: 25px;
   }
}

/*
====================
  nav bar styling
====================
*/

.navbar 
{
   background-color: black;
   .navbar-brand
   {
      color: white;
      position: relative;
      left: 20%
   }
   .navbar-nav li a
   {
      color: white;
   }
}

.navbar-brand
{
   padding-left: 0;
}

.nav-toggle-button
{
   background-color: white;
}




/*
====================
      post index
====================
*/

.nav-main 
{
   margin: 0 auto;
}

.panel
{
   border: none;
}

div#posts.center-block.masonry
{
   @media screen and (max-width: 600px){
      padding-left: 0;
      padding-right: 0;
      margin-left: 0;
      margin-right: 0;
   }
}


// .header 
// {
// 	font-size: 70px;
//    @media screen and (max-width: 800px){
//       font-size: 30px;
//    }
// }

.add-new 
{
	font-size: 30px;
	position: relative;
	top: -2.75px;
}

.feed
{
   padding: 0;
}

.main-page-post-title 
 { 
   color: rgba(255, 255, 255, 1); 
   margin: 0;
   height: 15%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6); 
   position: absolute;
   bottom: 0;
   text-align: center;
   font-size: 1.4em;
}

.main-page-post-title:hover 
{
   color: rgba(255, 255, 255, 1); 
   margin: 0;
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.6); 
   position: absolute;
   bottom: 0;
   text-align: center;
   text-decoration: none;
}


.post-index-tile{
   @media screen and (max-width: 600px){
      width: 95%;
   }   

}




.container {
   padding-left: 3%;
   padding-right: 3%;
   padding-top: 0;
   padding-bottom: 0;
   margin: 0 auto;
   width: 100%;
   @media screen and (max-width: 600px){
      width: 100%;
      padding-left: 0;
      padding-right: 0;
      margin-left: 0;
      margin-right: 0;
   }

}

.container.masonry-container
{
   @media screen and (max-width: 568px){
      width: 100%;
      padding-left: 0;
      padding-right: 0;
   }

}


.active 
{
    float: none;
    margin: 0 auto;
 }

.item.w2 { width: 50%; }

p
{
   margin: 0;
}

li {
   list-style: none;
}

.panel-default
{
   margin: 0;
}

a {
   color: gray;
}

img 
{
   padding: 0;
}


/*
===============================
      post styling
===============================
*/

.col-xs-6 
{
   padding: 0;
}


p.col-xs-3
{
   padding: 0;
}

.post-description
{
   margin-top: 10px;
}

.post-options 
{
   margin-top: 10px;
}

.post-show-link
{
   color: black;
}

.post-options a
{
    padding-right: 15px;
}

.post-heading
{
   margin-bottom: 70px;
}

.test-random {
   width: 250px;
   margin: 0;
   text-align: center;
   margin: 0 auto;
   padding-top: 2.5%;
   #random-post-title 
    { 
      height: 10%;
      color: rgba(255, 255, 255, 1); 
      background-color: rgba(0, 0, 0, 0.6); 
      width: 100%;
   }
}


.post-show
{
   border: 1px solid black;
   max-width: 600px;
}

.post-content
{
   max-width: 95%;
   padding-left: 1%; 
   padding-right: 1%; 
   padding-bottom: 1%;
   margin: 0 auto; 
}

.post-details
{
   max-width: 75%;
   margin: 0 auto;
}

.post-image
{
   max-width: 100%
}

// .link-to-source
// {
//    max-width: 75%;
//    padding-left: 1%; 
//    padding-right: 1%; 
// }


/*
===============================
      user account page
===============================
*/

#carousel-example-generic
{
   margin-top: 40px;
}

#posts {
   width: 300px;
}

